# backend

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.test.yaml  docker-compose.yml  entities.drawio  pyproject.toml  pytest.ini  requirements.txt  schema.yml
.github/workflows/: django.yml  pytests.yml
accounts/: admin.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_deleted_at_user_is_deleted.py  0002_user_is_blocked.py  0002_user_sex.py  0003_alter_user_role_alter_user_sex.py
core/: models.py  settings.py  urls.py
documentation/: app_structures.md
establishments/: admin.py  middleware.py  models.py  permissions.py  serializers.py  urls.py  views.py
establishments/migrations/: 0001_initial.py  0002_alter_establishment_owner.py  0002_establishment_is_active.py  (+8 more)
feedback/: admin.py  models.py  seializers.py  urls.py  views.py
fixtures/: beverages.json  categories.json  establishment_banners.json  establishments.json  establishments_updated.json  menus.json  orders.json  qrcodes.json  subscriptions.json  users.json
menu/: admin.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
orders/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
subscriptions/: choices.py  models.py  serializers.py  urls.py  utils.py  views.py
support/: admin.py  models.py  serializers.py  urls.py  views.py
tests/: conftest.py  factories.py  test_accounts_app.py  test_beverages.py  test_categories.py  test_categories_of_menu_items.py  test_establishments_app.py  test_menus.py  test_orders_app.py  test_support_app.py  test_support_comment_app.py  test_support_post_app.py
(+22 files in other folders)
