[tool.poetry]
name = "reviro-backend"
version = "0.1.0"
description = ""
authors = ["eddy.di <eddy.di.fint@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
pre-commit = "^3.7.0"
djangorestframework = "^3.15.1"
drf-yasg = "^1.21.7"
python-decouple = "^3.8"
filelock = "3.13.3"
pyyaml = "6.0.1"
setuptools = "69.2.0"
identify = "2.5.35"
nodeenv = "1.8.0"
virtualenv = "20.25.1"
sqlparse = "0.4.4"
platformdirs = "4.2.0"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
