[tool.poetry]
name = "reviro-backend"
version = "0.1.0"
description = ""
authors = ["eddy.di <eddy.di.fint@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
pre-commit = "^3.7.0"
djangorestframework = "^3.15.1"
python-decouple = "^3.8"
filelock = "3.13.3"
pyyaml = "6.0.1"
setuptools = "69.2.0"
identify = "2.5.35"
nodeenv = "1.8.0"
virtualenv = "20.25.1"
sqlparse = "0.4.4"
platformdirs = "4.2.0"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
pillow = "^10.3.0"
djangorestframework-simplejwt = "^5.3.1"
pytest-django = "^4.8.0"
pytest-factoryboy = "^2.7.0"
faker = "^24.11.0"
django-cloudinary-storage = "0.3.0"
qrcode = "^7.4.2"
django-cors-headers = "^4.3.1"
django-rest-passwordreset = "^1.4.1"
django-filter = "^24.2"
drf-spectacular = "^0.27.2"
pytest-cov = "^5.0.0"
gunicorn = "21.2.0"
pytz = "^2024.1"
paypalrestsdk = "^1.13.3"
paypal-checkout-serversdk = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
